--- a/index.html
+++ b/index.html
@@ -314,7 +314,12 @@
 
             <div class="div3cardcongaythang row">
                 <div class="card card2 col-md-4">
-                    <img class="card-img-top" src="images/author-image2.jpg" alt="Card image" style="width:100%">
+                    <div class="divoverlay">
+                        <img class="card-img-top" src="images/courses-image4.jpg" alt="Card image" style="width:100%">
+                            <div class="texttronghinh"> 
+                                <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
+                            </div>
+                    </div>
                     <div class="card-body">
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
@@ -326,7 +331,12 @@
                 </div>
 
                 <div class="card card2 col-md-4">
-                    <img class="card-img-top" src="images/author-image2.jpg" alt="Card image" style="width:100%">
+                    <div class="divoverlay">
+                        <img class="card-img-top" src="images/courses-image5.jpg" alt="Card image" style="width:100%">
+                            <div class="texttronghinh"> 
+                                <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
+                            </div>
+                    </div>
                     <div class="card-body">
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
@@ -338,7 +348,12 @@
                 </div>
 
                 <div class="card card2 col-md-4">
-                    <img class="card-img-top" src="images/author-image2.jpg" alt="Card image" style="width:100%">
+                    <div class="divoverlay">
+                        <img class="card-img-top" src="images/courses-image1.jpg" alt="Card image" style="width:100%">
+                            <div class="texttronghinh"> 
+                                <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
+                            </div>
+                    </div>
                     <div class="card-body">
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
