--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
             <div class="div3cardcongaythang row">
                 <div class="card card2 col-md-4">
                     <div class="divoverlay">
-                        <img class="card-img-top" src="images/courses-image4.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="images/courses-image1.jpg" alt="Card image" style="width:100%">
                             <div class="texttronghinh"> 
                                 <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
                             </div>
@@ -324,25 +324,13 @@
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
                     <div class="divicon">
-                    <i class='fa fa-facebook-square'></i>
-                    <i class='fa fa-facebook-square'></i>
-                    </div>
-                    </div>
-                </div>
-
-                <div class="card card2 col-md-4">
-                    <div class="divoverlay">
-                        <img class="card-img-top" src="images/courses-image5.jpg" alt="Card image" style="width:100%">
-                            <div class="texttronghinh"> 
-                                <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
+                        <div class="khoiauthoer">
+                            <div class="khoithongtin">   
+                                <img class="anhauthor col-md-4" src="images/author-image1.jpg" alt="Avatar">
+                                <h5 class="col-md-4">Mark Wilson</h5>
                             </div>
-                    </div>
-                    <div class="card-body">
-                    <h4 class="card-title">Catherine</h4>
-                    <p class="card-text">Education is the case</p>
-                    <div class="divicon">
-                    <i class='fa fa-facebook-square'></i>
-                    <i class='fa fa-facebook-square'></i>
+                            <button class="btn btn-primary col-md-4 nutbaogia" type="submit">USD 45</button>   
+                        </div>
                     </div>
                     </div>
                 </div>
@@ -358,8 +346,35 @@
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
                     <div class="divicon">
-                    <i class='fa fa-facebook-square'></i>
-                    <i class='fa fa-facebook-square'></i>
+                        <div class="khoiauthoer">
+                            <div class="khoithongtin">   
+                                <img class="anhauthor col-md-4" src="images/author-image1.jpg" alt="Avatar">
+                                <h5 class="col-md-4">Mark Wilson</h5>
+                            </div>
+                            <button class="btn btn-primary col-md-4 nutbaogia" type="submit">USD 45</button>   
+                        </div>
+                    </div>
+                    </div>
+                </div>
+
+                <div class="card card2 col-md-4">
+                    <div class="divoverlay">
+                        <img class="card-img-top" src="images/courses-image1.jpg" alt="Card image" style="width:100%">
+                            <div class="texttronghinh"> 
+                                <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
+                            </div>
+                    </div>
+                    <div class="card-body">
+                    <h4 class="card-title">Catherine</h4>
+                    <p class="card-text">Education is the case</p>
+                    <div class="divicon">
+                        <div class="khoiauthoer">
+                            <div class="khoithongtin">   
+                                <img class="anhauthor col-md-4" src="images/author-image1.jpg" alt="Avatar">
+                                <h5 class="col-md-4">Mark Wilson</h5>
+                            </div>
+                            <button class="btn btn-primary col-md-4 nutbaogia" type="submit">USD 45</button>   
+                        </div>
                     </div>
                     </div>
                 </div>
