--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                             <div class="texttronghinh"> 
                                 <i class='fas fa-calendar-alt'></i>&nbsp; <b>10/10/1000</b> &nbsp; <i class='fa fa-clock-o'></i> <b>7 Hours</b>
                             </div>
-                    </div>
+                    </div> 
                     <div class="card-body">
                     <h4 class="card-title">Catherine</h4>
                     <p class="card-text">Education is the case</p>
@@ -379,9 +379,13 @@
                     </div>
                 </div>
             </div>
-
+            
+            <div class="text-center thebocmuiten">
+                <button class="btn btn-primary" type="submit"><</button>
+                <button class="btn btn-primary" type="submit">></button>
+            </div>
         </div>
-
+        
 </div>    
 </body>
 </html>
