--- a/index.html
+++ b/index.html
@@ -385,7 +385,12 @@
                 <button class="btn btn-primary" type="submit">></button>
             </div>
         </div>
-        
+        <div class="cardreview">
+            <div class="doanvancardreview text-center">
+                <h3>Studient Review</h3>
+                <P>From Around the World</P>
+            </div>
+        </div>
 </div>    
 </body>
 </html>
