--- a/index.html
+++ b/index.html
@@ -390,6 +390,54 @@
                 <h3>Studient Review</h3>
                 <P>From Around the World</P>
             </div>
+            <div class="col-md-4">
+                <div class="gioithieuauthor col-md-12">
+                    <img class="anhdev col-md-3" src="images/tst-image4.jpg" alt="">
+                    <div class="cardreviewthongtin col-md-9">
+                        <h3>Andrio</h1>
+                        <p>Web Developer</p>
+                     </div>
+                </div>
+                <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gal</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gioithieuauthor col-md-12">
+                    <img class="anhdev col-md-3" src="images/tst-image4.jpg" alt="">
+                    <div class="cardreviewthongtin col-md-9">
+                        <h3>Andrio</h1>
+                        <p>Web Developer</p>
+                     </div>
+                </div>
+                <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gal</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </div>
+
+            <div class="col-md-4">
+                <div class="gioithieuauthor col-md-12">
+                    <img class="anhdev col-md-3" src="images/tst-image4.jpg" alt="">
+                    <div class="cardreviewthongtin col-md-9">
+                        <h3>Andrio</h1>
+                        <p>Web Developer</p>
+                     </div>
+                </div>
+                <p>is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a gal</p>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+                <span class="fa fa-star checked"></span>
+            </div>
+          but tron o day
         </div>
 </div>    
 </body>
