--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <button class="btn btn-primary" type="submit">></button>
             </div>
         </div>
-        <div class="cardreview">
+        <div class="cardreview container">
             <div class="doanvancardreview text-center">
                 <h3>Studient Review</h3>
                 <P>From Around the World</P>
@@ -437,7 +437,62 @@
                 <span class="fa fa-star checked"></span>
                 <span class="fa fa-star checked"></span>
             </div>
-          but tron o day
+            <div class="text-center thebochinhtron">
+                <button class="btn btn-primary" type="submit"></button>
+                <button class="btn btn-primary" type="submit"></button>
+            </div>
+        </div>
+        <div class="khoicontactuss">
+            <div class="row">
+                <div class="col-md-6 khoicontact">
+                    <h3>Contact US</h3>
+                    <p>we love conversion. Let's us Talk</p>
+                    
+                        <input class="contact1" type="text" name="fullname" id="" placeholder="Full Name">
+                        <br><br>
+                        <input class="contact2" type="text" name="email" id="email" placeholder="Your Email Adress">
+                        <br><br>
+                        <textarea name="tellaboutus" id="tellaboutus" cols="70" rows="10" placeholder="Tell us about your message"></textarea>
+                        <br><br><br>
+                        <a class="btn btn-primary nutbamcontact4"href="#" role="button">Send Message</a>
+                </div>
+
+                <div class="col-md-6 khoianhcontact">
+                        <img src="images/contact-image.jpg" alt="">
+                </div>
+           </div>
+        </div>
+
+        <div class="footer text-center">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Headquarter</h3>
+                    <p>1800 dapibus a tortor pretium, <br> interger nisl dui, ABC 12000</p>
+                    <i class='fa fa-facebook'></i>
+                    <i class='fa fa-twitter'></i>                   
+                    <i class='fa fa-instagram'></i>
+                    <p>Copyright 2018 Company Name <br> Design: Template Mo</p>
+                </div>
+
+                <div class="col-md-4">
+                    <h3>Contact Info</h3>
+                    <p>+65 2244 1100, +66 1800 1100 <br> hello@yourmail.com</p>
+                    <h3>Quick Links</h3>
+                    <a href="#">Career</a>
+                    <a href="#">Investor</a>
+                    <a href="#">Terms & Conditions</a>
+                    <br>
+                    <a href="#">Refund Policy</a>
+                </div>
+
+                <div class="col-md-4">
+                   <h3>Newsletter Signup</h3>
+                   <input type="text" name="yourmail" id="yourmailsendme" placeholder="Enter Your email">
+                   <br>
+                   <a class="btn btn-primary nutsendme"href="#" role="button">Send ME</a>
+                   <p class="pleasenote">* Please note - we do not spam your email.</p>
+                </div>
+            </div>
         </div>
 </div>    
 </body>
