--- a/index.html
+++ b/index.html
@@ -163,39 +163,40 @@
               </div>
             </div>
         </div>
-        <div class="divboccard col-md-12">
-        <table>
-            <tr>
-                <td>
-                    <div class="card card1 col-md-4" style="width: 18rem;">
-                        <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h3>Trending Courses</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <div class="card card1 col-md-4" style="width: 18rem;">
-                        <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h3>Trending Courses</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </td>
-                <td>
-                    <div class="card card1 col-md-4" style="width: 18rem;">
-                        <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
-                        <div class="card-body">
-                            <h3>Trending Courses</h3>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-        </table>
-
+        <div class="divboccard">
+            <div class="row">
+                <table>
+                    <tr>
+                        <td>
+                            <div class="card card1 col-md-4">
+                                <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h3>Trending Courses</h3>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="card card1 col-md-4">
+                                <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h3>Trending Courses</h3>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="card card1 col-md-4">
+                                <img class="card-img-top" src="images/cardnum.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h3>Trending Courses</h3>
+                                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                </div>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </div>
         <div class="divduoicard col-md-12">
             <h1>Start your jouner to a better life with <br/> online practucal courses</h1>
