--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                     </div> 
             </div> 
                 <div class="hinhtronduoicard col-md-6">
-                    <form class="formnhapthongtin" action="post">
+                    <form class="formnhapthongtin text-center" action="post">
                         <br><br><br><br><br>
                         <h3 class="signup">Sign Up ToDay</h3>
                         <br>
