--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
            </div>
         </div>
 
-        <div class="footer text-center">
+        <div class="footer text-center divfooter">
             <div class="rowfooter">
                 <div class="col-md-4">
                     <h3>Headquarter</h3>
